portfolio/src/styles/Banner.css
/* #ffcb00 */
.banner-container {
  background-color: lightsteelblue;
  padding: 35px 15px 35px 15px;
}

.welcome-area {
  position: relative;
  z-index: 1; }

.welcome-image {
  align-self: center;
  max-width: 85%;
}

.welcome-text-container {
  text-align: center;
  text-align: -webkit-center;
  
  display: flex;
  align-items: center;
  place-content: center;
}

.welcome-text {
  text-align: start;
  margin-bottom: 1rem;
}

.outlined-btn {
  background-color: transparent;
  display: inline-block;
  color: black;
  border: 2px solid black;
  font-size: 12px;
  font-weight: 500;
  text-transform: uppercase;
  border-radius: 12px;
  margin-top: 5px;
  margin-bottom: 5px;
  -webkit-transition-duration: 500ms;
  -o-transition-duration: 500ms;
  transition-duration: 500ms;
  letter-spacing: 1px; }

